feature: death syncing with 3rd party
