# src/dtos/death.ts
@@ -1,0 +1,7 @@
+export class DeathSyncDto {
+  created: number
+
+  constructor(params: DeathSyncDto) {
+    this.created = params.created
+  }
+}
